--- a/app/views/admin/roles/_form.html.haml
+++ b/app/views/admin/roles/_form.html.haml
@@ -1,4 +1,4 @@
-= form_with model: role, scope: :role, url: admin_role_path(role), html: { class: "ui fluid form" } do |f|
+= form_for [:admin,role], html: { class: "ui fluid form" } do |f|
   - if role.errors.any?
     .ui.message.error
       %h2= "#{ pluralize role.errors.count, "error" } prohibited this role from being saved:"
@@ -12,11 +12,14 @@
     = f.label :name
     = f.text_field :name, aria: { describedby: "role name" }
 
+  .field
+    = f.label :description
+    = f.text_area :description, aria: { describedby: "description" }
+
   %h4.ui.dividing.header permissions
 
   .field
     .ui.checkbox
       = f.collection_check_boxes :permission_ids, Permission.all, :id, :name
-      -#= f.label :permissions
 
   = f.submit "save", class: "ui positive right floated submit button"
