react-rails seems to be nuking style tag contents :|

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -57,6 +57,11 @@ html, body{
   display: none !important;
 }
 
+.navbar-container {
+  display: flex;
+  flex-grow: 1;
+}
+
 // Semantic UI has these classes, however they're only applicable to
 // grids, containers, rows and columns.
 // plus, there isn't any `mobile hidden`, `X hidden` class.
