--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -8,6 +8,7 @@
   transientBug #{ content_for :page_title }
 
 = csrf_meta_tags
+= csp_meta_tag
 
 = stylesheet_link_tag "public", media: "all", "data-turbolinks-track": "reload"
 = stylesheet_pack_tag "public", media: "all", "data-turbolinks-track": "reload"
