adjust the container to be a little card like thing

--- a/app/views/bookmarks/tag_wizard/index.html.haml
+++ b/app/views/bookmarks/tag_wizard/index.html.haml
@@ -12,7 +12,7 @@
       delete
 
 - content_for :custom_grid do
-  .ui.container
+  .ui.raised.very.padded.text.container.segment
     %h1.ui.header Tag Wizard!
 
     %h3.ui.header= @bookmark.title
