--- a/app/views/bookmarks/tag_wizard/index.html.haml
+++ b/app/views/bookmarks/tag_wizard/index.html.haml
@@ -14,6 +14,8 @@
 - content_for :custom_grid do
   .ui.raised.very.padded.text.container.segment
     %h1.ui.header Tag Wizard!
+    %p
+      The tag wizard makes it easy for you to work through your backlog of untagged bookmarks!
 
     %h3.ui.header= @bookmark.title
 
