--- a/app/views/admin/bookmarks/index.html.haml
+++ b/app/views/admin/bookmarks/index.html.haml
@@ -2,6 +2,8 @@
   Bookmarks
 
 - content_for :menu do
+  = react_component "BulkActions", { actions: [ { "recache-all": admin_bookmarks_bulk_recache_path }, { "delete-all": admin_bookmarks_bulk_delete_path } ] }
+
   .item.hidden{ data: { group: "bulk-edit-menu" } }
     .divider
     .header Bulk Actions
