break up the css a bit and make each button its own renderable
This makes it easier to add/remove and keep the two sides in sync
And with a new store that things can talk and sync through, each bulk
Button can choose on its own if it's displayed or not, which opens
The possibility for things like "merge" buttons that needs two or more
Selected bookmarks and such

Also broke apart the modal portal and useModal hook

--- a/app/javascript/styles/admin.scss
+++ b/app/javascript/styles/admin.scss
@@ -4,6 +4,25 @@
 
 @tailwind base;
 @tailwind components;
+
+@import "components/_buttons.scss";
+
+.bulk-action-container {
+  @apply overflow-hidden w-full;
+
+  & > .bulk-action-menu {
+    @apply px-4 py-4 mb-2 mt-2 flex flex-col;
+
+    & > h2 {
+      @apply font-bold mb-4;
+    }
+
+    & .button {
+      @apply w-full;
+    }
+  }
+}
+
 @tailwind utilities;
 
 // @tailwind screens;
