--- a/app/javascript/styles/components/_buttons.scss
+++ b/app/javascript/styles/components/_buttons.scss
@@ -6,36 +6,39 @@
   @apply font-semibold py-3 px-4 mt-2 rounded;
 }
 
-@variants hover {
+@variants hover, active {
   .button-gray {
     @include button-colors(gray-400, transparent, gray-800);
+  }
+
+  // TODO: Is there a better pattern for this sort of pattern
+  // where a solid button starts off dimmer and gets brighter/darker
+  // when hovered over or active?
+  .button-light-gray {
+    @include button-colors(gray-300, transparent, gray-600);
   }
 
   .button-gray-outline {
     @include button-colors(transparent, gray-700, gray-800);
   }
 
+  .button-light-gray-outline {
+    @include button-colors(transparent, gray-500, gray-600);
+  }
+
   .button-red {
     @include button-colors(red-600, transparent, white);
+  }
+
+  .button-light-red {
+    @include button-colors(red-300, transparent, red-600);
   }
 
   .button-red-outline {
     @include button-colors(transparent, red-600, red-600);
   }
-}
 
-.button-gray {
-  @include button-colors(gray-300, transparent, gray-600);
-}
-
-.button-gray-inverted {
-  @include button-colors(transparent, gray-500, gray-600);
-}
-
-.button-red {
-  @include button-colors(red-300, transparent, red-600);
-}
-
-.button-red-inverted {
-  @include button-colors(transparent, red-600, red-600);
+  .button-light-red-outline {
+    @include button-colors(transparent, red-300, red-600);
+  }
 }
