WIP on refactoring modals
Trying to get them a little more customizable with a
Generic "basic" style for common use cases. I'd like to
Make dangerous actions/modals a little more ... dangery
Like red backgrounds and such, plus give the ability to
Have custom modals like forms or such that might not
Follow the standard pattern

Temp rename in place to useBasicModal and BasicModal

This is a more generic, albeit not fully broken up/generalized modal
That hopefully can be used for 75%+ use cases. I'll move it out to
A dedicated BasicModal component later.

break apart the modal and make it much more customizable

Also update on some styling and patterns

Styling refactors & tweaks for modals & buttons

--- a/app/javascript/styles/admin.scss
+++ b/app/javascript/styles/admin.scss
@@ -6,6 +6,7 @@
 @tailwind components;
 
 @import "components/_buttons.scss";
+@import "components/_modal.scss";
 
 .bulk-action-menu {
   @apply px-4 flex flex-col w-full overflow-hidden;
