Make use of new store_records helper
i know how to ruby

add vscode settings

remove an empty button css module

add dev server as a helper script to package.json

this is useful for vscode and it's little run script interface

rails nonce for inline script with store data

wire up modal actions to bulk endpoints

--- a/app/views/admin/bookmarks/index.html.haml
+++ b/app/views/admin/bookmarks/index.html.haml
@@ -1,14 +1,16 @@
 - content_for :page_title do
   Bookmarks
 
+- content_for :store do
+  != { records: store_records(@bookmarks, only: [:id, :uri, :user]) }.to_json
+
 - content_for :menu do
   .bulk-action-menu
     = react_component "BulkActions/Header", actionUrl: admin_bookmarks_bulk_recache_path
     = react_component "BulkActions/admin/RecacheAll", actionUrl: admin_bookmarks_bulk_recache_path
     = react_component "BulkActions/admin/DeleteAll", actionUrl: admin_bookmarks_bulk_delete_path
 
-- content_for :store do
-  != { records: @bookmarks.reduce({}) { |memo, bookmark| memo.merge({ bookmark.id => bookmark.slice(:id, :uri, :user) }) } }.to_json
+= paginate @bookmarks
 
 %table.ui.celled.table
   %thead
