--- a/app/views/layouts/admin/_head.html.haml
+++ b/app/views/layouts/admin/_head.html.haml
@@ -11,7 +11,7 @@
 = csp_meta_tag
 
 - if content_for? :store
-  :javascript
+  = javascript_tag nonce: true do
     window.__initStore__ = #{ raw content_for(:store) }
 
 = stylesheet_link_tag "admin", media: "all", "data-turbolinks-track": "reload"
