--- a/app/views/images/_form.html.haml
+++ b/app/views/images/_form.html.haml
@@ -13,7 +13,7 @@
   .field
     = f.label :tags
     .ui.multiple.search.selection.dropdown{ data: { behavior: "autocomplete-image-tags" } }
-      = f.text_field :tags, value: image.tags.join(","), style: "display: none", autocomplete: "off", data: { behaviour: "init" }
+      = f.text_field :tags, value: image.tags.join(","), autocomplete: "off", data: { behaviour: "init" }, class: "hidden"
       %i.dropdown.icon
       .default.text Search Tags
 
