Transition rails ujs, actioncable, turbolinks, activestorage to webpacker
I got bitten by yet another rails-assets ssl cert renewal
https://github.com/tenex/rails-assets/issues/457
https://github.com/tenex/rails-assets/issues?q=is%3Aissue+expired+is%3Aclosed+sort%3Aupdated-desc

and between rails 6 moving to webpacker as the default for JS assets
and wanting to move off of the jquery mess and semantic-ui to finally
build out some more less-out-of-box UI elements, I've started the
process of moving to a setup of components backed by react after having
a good experience with the search bar, and building out custom ui styling
with the aid of tailwindcss and scss magic

--- a/app/views/layouts/admin/_head.html.haml
+++ b/app/views/layouts/admin/_head.html.haml
@@ -8,5 +8,10 @@
   transientBug Admin #{ content_for :page_title }
 
 = csrf_meta_tags
+= csp_meta_tag
 
 = stylesheet_link_tag "admin", media: "all", "data-turbolinks-track": "reload"
+= javascript_include_tag "admin", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
+
+= stylesheet_pack_tag "admin", media: "all", "data-turbolinks-track": "reload"
+= javascript_pack_tag "admin", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
