--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -11,4 +11,7 @@
 = csp_meta_tag
 
 = stylesheet_link_tag "public", media: "all", "data-turbolinks-track": "reload"
+= javascript_include_tag "public", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
+
 = stylesheet_pack_tag "public", media: "all", "data-turbolinks-track": "reload"
+= javascript_pack_tag "public", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
