remove margin on checkboxes without label content
add a rough inverted option to checkbox

rework post-css stuff

this wasn't nescessary but i wanted to experiement with more post features and plugins
and was hitting some issues with the sass and post difference

fix issue with window store init data not reloading

hashtag turbolinks

--- a/app/views/layouts/admin/_body.html.haml
+++ b/app/views/layouts/admin/_body.html.haml
@@ -1,3 +1,9 @@
+= javascript_tag nonce: true, "data-turbolinks-track": "reload", "data-turbolinks-eval": true do
+  window.__initStore__ = {}
+  - if content_for? :store
+    window.__initStore__ = #{ raw content_for(:store) }
+  console.log("hi")
+
 = render partial: "layouts/admin/sidebar"
 
 = render partial: "layouts/admin/navbar"
