--- a/app/javascript/styles/admin.css
+++ b/app/javascript/styles/admin.css
@@ -1,12 +1,9 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import "components/_buttons";
+@import "components/_modal";
+@import "components/_checkbox";
 
 @tailwind base;
 @tailwind components;
-
-@import "components/_buttons.scss";
-@import "components/_modal.scss";
 
 .bulk-action-menu {
   @apply px-4 flex flex-col w-full overflow-hidden;
@@ -32,10 +29,6 @@
   }
 }
 
-input:checked + svg {
-  display: block;
-}
-
 @tailwind utilities;
 
-// @tailwind screens;
+/* @tailwind screens; */
