--- a/app/views/layouts/admin/_head.html.haml
+++ b/app/views/layouts/admin/_head.html.haml
@@ -1,5 +1,6 @@
 %meta{ :content => "width=device-width, initial-scale=1, shrink-to-fit=no", "name" => "viewport" }
 %meta{ :content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type" }
+%meta{ :name => "turbolinks-cache-control", :content => "no-cache" }
 
 = content_for :meta
 
