start on reworking the main bookmarks list view
adds a new sidebar that turns into a top menu on mobile which holds the bulk actions
and moves away from using semantic for the whole list

--- a/app/javascript/styles/components/_modal.css
+++ b/app/javascript/styles/components/_modal.css
@@ -76,7 +76,7 @@
 }
 
 .modal-dark-dialogue {
-  @apply text-white;
+  @apply text-white bg-gray-600;
 
   & .modal-body-header {
     border-bottom: 1px solid rgba(255, 255, 255, 0.17);
