--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -3,4 +3,4 @@
 
 %h1 Your Bookmarks
 
-= render partial: "bookmarks_list", locals: { bookmarks: @bookmarks }
+= render partial: "bookmarks_list_rework", locals: { bookmarks: @bookmarks }
