--- a/app/javascript/styles/admin.css
+++ b/app/javascript/styles/admin.css
@@ -1,33 +1,10 @@
 @import "components/_buttons";
 @import "components/_modal";
 @import "components/_checkbox";
+@import "components/_bulk_action_menu";
 
 @tailwind base;
 @tailwind components;
-
-.bulk-action-menu {
-  @apply px-4 flex flex-col w-full overflow-hidden;
-
-  h2 {
-    @apply font-bold text-lg;
-  }
-
-  small {
-    @apply text-gray-500;
-  }
-
-  & .button {
-    @apply w-full my-2;
-  }
-
-  & :first-child:not(:empty) {
-    @apply mt-2;
-  }
-
-  & :last-child:not(:empty) {
-    @apply mb-2;
-  }
-}
 
 @tailwind utilities;
 
