--- a/app/javascript/styles/public.css
+++ b/app/javascript/styles/public.css
@@ -1,9 +1,54 @@
 @import "components/_buttons";
 @import "components/_modal";
 @import "components/_checkbox";
+@import "components/_bulk_action_menu";
 
 @tailwind base;
 @tailwind components;
+
+.ui.top.fixed.menu {
+  max-height: 52px;
+}
+
+.bookmarks.index {
+  .main {
+    @apply flex flex-col;
+
+    @screen lg {
+      @apply flex-row;
+    }
+  }
+
+  & > .ui.footer {
+    @apply mt-0;
+  }
+}
+
+aside.tb.sidebar-menu {
+  @apply w-full p-4 text-white flex-shrink-0 block border-t;
+
+  background-color: #1b1c1d;
+
+  border-color: rgba(224, 224, 224, 0.2);
+
+  @screen lg {
+    @apply w-1/4 inset-y-0 left-0 max-w-sm;
+  }
+
+  & .tb.bulk-action-menu {
+    @apply flex flex-col;
+  }
+}
+
+main.tb {
+  @apply p-4 mt-0 flex flex-col w-full;
+
+  /*
+   * Takes care of semantic UI adding a margin to the top of the last child in
+   * the ".pusher.main"
+   * */
+  margin-top: 0px !important;
+}
 
 @tailwind utilities;
 /* @tailwind screens; */
