Rework modals to try and get them out of the buttons
trying some different patterns like hooking them up to the store and
having a few set differernt types again

also reorganize and remove some unused code

let the rails side of things set the attributes and type of the records too
which makes for a reusable modal
without needing to keep track of the wording in the buttons and such

--- a/app/views/bookmarks/_bookmarks_list_rework.html.haml
+++ b/app/views/bookmarks/_bookmarks_list_rework.html.haml
@@ -70,4 +70,4 @@
         Maybe
         = link_to "make one?", new_bookmark_path
 
-  = react_component "BulkActions/StoreModals"
+  = react_component "StoreModals"
