--- a/app/javascript/styles/components/_modal.css
+++ b/app/javascript/styles/components/_modal.css
@@ -1,24 +1,22 @@
-.modal-container {
-  @apply fixed w-full h-auto inset-0 z-50 overflow-hidden flex justify-center items-center;
+.modal-open {
+  overflow: hidden;
+}
 
-  &.modal-dimmed-background {
+.modal-overlay {
+  @apply fixed w-full h-auto inset-0 z-50 overflow-scroll flex justify-center items-center;
+
+  &.overlay-dimmed-background {
     background: rgba(0, 0, 0, 0.5);
   }
 }
 
-.modal-dialogue {
-  & > .modal-dialogue-body {
-    @apply text-left;
+.modal-container {
+  @apply max-w-full mx-auto z-50 flex;
 
-    & > * {
-      @apply px-6 py-4;
-    }
-  }
+  max-height: calc(100% - 70px);
 
-  @apply shadow max-w-full mx-auto rounded z-50 overflow-y-auto;
-
-  max-height: calc(100% - 60px);
   margin-top: 60px;
+  margin-bottom: 10px;
 
   @screen md {
     @apply w-1/2;
@@ -27,43 +25,15 @@
   }
 }
 
-.modal-body-header {
-  @apply flex justify-between items-center;
+.modal-dialogue {
+  @apply text-left flex flex-col shadow rounded;
 
-  h2 {
-    @apply text-xl;
+  & > * {
+    @apply px-6 py-4 flex-grow flex-shrink;
   }
 }
 
-.modal-header-close {
-  @apply cursor-pointer z-50 text-gray-900;
-
-  opacity: 0.5;
-
-  transition: all 250ms linear;
-
-  &:hover {
-    opacity: 0.9;
-  }
-}
-
-.modal-body-content {
-  @apply my-5; /* overflow-scroll; */
-}
-
-.modal-body-actions {
-  @apply flex flex-row justify-between items-center;
-
-  & > *:not(:first-child) {
-    @apply ml-2;
-  }
-}
-
-.bg-danger {
-  background: linear-gradient(87deg, #db2828 0, #f55036 100%);
-}
-
-.modal-light-dialogue {
+.light-dialogue {
   @apply bg-white text-black;
 
   & .modal-body-header {
@@ -75,7 +45,7 @@
   }
 }
 
-.modal-dark-dialogue {
+.dark-dialogue {
   @apply text-white bg-gray-600;
 
   & .modal-body-header {
@@ -87,6 +57,34 @@
   }
 }
 
-.modal-open {
-  overflow: hidden;
+.modal-body-header {
+  @apply flex justify-between items-center;
+
+  h2 {
+    @apply text-xl;
+  }
+
+  .modal-header-close {
+    @apply cursor-pointer z-50 text-gray-900;
+
+    opacity: 0.5;
+
+    transition: all 250ms linear;
+
+    &:hover {
+      opacity: 0.9;
+    }
+  }
+}
+
+.modal-body-content {
+  @apply my-5 overflow-scroll;
+}
+
+.modal-body-actions {
+  @apply flex flex-row justify-between items-center;
+
+  & > *:not(:first-child) {
+    @apply ml-2;
+  }
 }
