--- a/app/views/bookmarks/_bookmarks_list.html.haml
+++ b/app/views/bookmarks/_bookmarks_list.html.haml
@@ -1,55 +1,70 @@
-- if bookmarks.any?
-  - content_for :secondary_navbar do
-    .ui.item
-      = select_all_checkbox do
-        %label
-          .mobile.only Select All
+-#%label{ class: "flex justify-start items-start" }
+  %div{ class: "border border-gray-400 rounded w-6 h-6 flex flex-shrink-0 justify-center items-center focus-within:border-blue-500 mr-2" }
+   %input{ type: :checkbox, class: "opacity-0 absolute" }
+   %svg{ class: "fill-current w-4 h-4 text-gray-400 pointer-events-none inverted", viewBox: "0 0 20 20" }
+     %clipPath{ id: "_clip1" }
+       %path{ d: "M20,20l-20,0l0,-20l20,0l0,20Zm-17,-9.291l4.9,5.129l9.1,-9.525l-2.1,-2.151l-7,7.543l-2.8,-3.429l-2.1,2.433Z" }
+     %g{ clip: { path: "url(#_clip1)" } }
+       %path{ d: "M20,3.5c0,-1.932 -1.568,-3.5 -3.5,-3.5l-13,0c-1.932,0 -3.5,1.568 -3.5,3.5l0,13c0,1.932 1.568,3.5 3.5,3.5l13,0c1.932,0 3.5,-1.568 3.5,-3.5l0,-13Z" }
+  %div{ class: "select-none" } Select All
 
-    = bulk_edit_action "recache-all", url: bookmarks_bulk_recache_path, template: "public/templates/bookmarks/recache-all" do
-      %i.download.icon
-      recache
+- content_for :store do
+  != { records: store_records(bookmarks, only: [:id, :title, :uri]) }.to_json
 
-    = bulk_edit_action "tag-all", url: bookmarks_bulk_tag_path, template: "public/templates/bookmarks/tag-all" do
-      %i.tags.icon
-      tags
+- content_for :sidebar do
+  - if bookmarks.any?
+    .tb.bulk-action-menu
+      = react_component "BulkActions/SelectAll", label: "Select All Bookmarks"
 
-    .right.menu
-      = bulk_edit_action "delete-all", url: bookmarks_bulk_delete_path, template: "public/templates/bookmarks/delete-all" do
-        %i.trash.icon
-        delete all
+      = react_component "BulkActions/Header"
+      = react_component "BulkActions/public/TagAll", actionUrl: bookmarks_bulk_tag_path, autocompleteUrl: bookmarks_autocomplete_index_path
+      = react_component "BulkActions/public/DeleteAll", actionUrl: bookmarks_bulk_delete_path
 
-  .ui.divided.items
+- content_for :sidebar_body do
+  - if bookmarks.any?
+    = paginate bookmarks
+
     - bookmarks.each do |bookmark|
-      .item
-        .content
+      .tb.bookmark-card
+        .tb.card-menu
+          = react_component "BulkActions/SelectSingle", id: bookmark.id
 
-          .header= link_to bookmark.title, bookmark_path(bookmark)
+          = link_to edit_bookmark_path(bookmark), title: "edit" do
+            %i.pencil.icon
 
-          .meta
-            = link_to bookmark.uri.to_s, bookmark.uri.to_s
+        .tb.card-body
+          %h4
+            = link_to bookmark.title, bookmark_path(bookmark)
 
-          .description
-            .inline
-              = model_tag bookmark, only: [:uri, :title]
+            %small
+              (#{ link_to bookmark.uri.host.to_s, bookmark.uri.to_s, title: bookmark.uri.to_s })
 
-              .date
-                = distance_of_time_in_words_to_now(bookmark.created_at)
-                ago
+          %p
+            - unless bookmark.description.blank?
+              = bookmark.description.truncate(80)
+            - else
+              %em No description
 
-          .extra
-            .ui.labels
+          .tb.card-footer
+            %time{ datetime: bookmark.created_at, title: bookmark.created_at.to_s(:long_ordinal) }
+              = distance_of_time_in_words_to_now(bookmark.created_at)
+              ago
+
+            .tb.tags
               - bookmark.tags.each do |tag|
                 = link_to bookmarks_tag_path(tag) do
-                  .ui.label{ class: [tag.color] }= tag.label
+                  %span{ class: ["tb tag bg-#{tag.color}-500"] }= tag.label
 
-- else
-  %h1.huge.center.aligned.icon.header
-    %i.bookmark.icon
-    .content No bookmarks found!
+              -#%button.tb.tag
+                %i.plus.icon
 
-  %p
-    Maybe
-    = link_to "make one?", new_bookmark_path
+    = paginate bookmarks
 
-- if bookmarks.respond_to? :total_pages
-  = paginate bookmarks
+  - else
+    %h1
+      %i.bookmark.icon
+      No bookmarks found!
+
+    %p
+      Maybe
+      = link_to "make one?", new_bookmark_path
