--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,24 +1,26 @@
 - content_for :page_title do
   Home
 
-.ui.segment
-  %h2.ui.dividing.header Quick Stats
+- content_for :sidebar_body do
+  .ui.segment
+    %h2.ui.dividing.header Quick Stats
 
-  .ui.statistics
-    .statistic
-      .value= @stats[:total_count]
-      .label Total Bookmarks
-    - if @stats[:untagged_count] != 0
-      .statistic.red
-        .value= @stats[:untagged_count]
-        .label
-          = link_to "Untagged Bookmarks", bookmarks_search_index_path(q: "NOT has:tags")
-          %br
-          = link_to "Tag Wizard", bookmarks_tag_wizard_index_path, class: "ui mini button"
-    - else
+    .ui.statistics
       .statistic
-        .value= @stats[:untagged_count]
-        .label Untagged Bookmarks!
+        .value= @stats[:total_count]
+        .label Total Bookmarks
+      - if @stats[:untagged_count] != 0
+        .statistic.red
+          .value= @stats[:untagged_count]
+          .label
+            = link_to "Untagged Bookmarks", bookmarks_search_index_path(q: "NOT has:tags")
+            %br
+            = link_to "Tag Wizard", bookmarks_tag_wizard_index_path, class: "ui mini button"
+      - else
+        .statistic
+          .value= @stats[:untagged_count]
+          .label Untagged Bookmarks!
 
-%h2.ui.dividing.header Most recent bookmarks
+  %h2.ui.dividing.header Most recent bookmarks
+
 = render partial: "bookmarks/bookmarks_list", locals: { bookmarks: @recent_bookmarks }
