--- a/app/views/layouts/_body.html.haml
+++ b/app/views/layouts/_body.html.haml
@@ -8,21 +8,8 @@
 - if content_for? :custom_body
   = content_for :custom_body
 
+- elsif content_for? :sidebar_body
+  = render partial: "layouts/application/sidebar"
+
 - else
-  .ui.dimmer
-    .ui.loader#page-loader
-
-  .ui.pusher.main
-    - if content_for? :secondary_navbar
-      .ui.fluid.secondary.top.attached.stackable.menu
-        = content_for :secondary_navbar
-
-    .messages
-      = render_service_announcements
-      = semantic_flash
-
-    - if content_for? :custom_grid
-      = content_for :custom_grid
-    - else
-      .ui.fluid.horizontally.padded.stackable.container
-        = yield
+  = render partial: "layouts/application/old_body"
