--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -39,7 +39,7 @@
     - else
       = link_to "Login", login_path, class: "item"
 
-= render partial: "layouts/sidebar"
+= render partial: "layouts/mobile_nav"
 
 .ui.top.fixed.inverted.menu.mobile.only
   .clickable.item
