--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -1,17 +1,11 @@
 - content_for :page_title do
   Bookmark '#{ @bookmark.title }'
 
-- content_for :secondary_navbar do
+- content_for :sidebar do
   - if @bookmark.offline_caches.any?
     = link_to "offline cache", bookmark_cache_index_path(@bookmark), data: { turbolinks: false }, class: "ui item"
 
   = link_to "edit", edit_bookmark_path(@bookmark), class: "ui item"
-
-  .ui.item
-    .ui.small.labels
-      - @bookmark.tags.each do |tag|
-        = link_to bookmarks_tag_path(tag) do
-          .ui.label{ class: [tag.color] }= tag.label
 
   .right.menu
     = link_to "recache", bookmark_cache_index_path(@bookmark), method: :post, class: "ui item"
@@ -19,7 +13,7 @@
     = modal_tag @bookmark, :delete, url: bookmark_path(@bookmark) do
       delete
 
-- content_for :custom_grid do
+- content_for :sidebar_body do
   = model_tag @bookmark, only: [ :uri, :title ], no_checkbox: true
 
   .ui.fluid.horizontally.padded.stackable.grid
@@ -31,6 +25,12 @@
       .date
         = @bookmark.created_at.to_s(:long)
         UTC
+
+      .ui.item
+        .ui.small.labels
+          - @bookmark.tags.each do |tag|
+            = link_to bookmarks_tag_path(tag) do
+              .ui.label{ class: [tag.color] }= tag.label
 
     .eight.wide.column
       - if @bookmark.description.present?
