--- a/app/views/layouts/application/_old_body.html.haml
+++ b/app/views/layouts/application/_old_body.html.haml
@@ -1,7 +1,4 @@
-.ui.dimmer
-  .ui.loader#page-loader
-
-.ui.pusher.main
+.ui.pusher.main.old
   - if content_for? :secondary_navbar
     .ui.fluid.secondary.top.attached.stackable.menu
       = content_for :secondary_navbar
