--- a/app/views/bookmarks/tags/show.html.haml
+++ b/app/views/bookmarks/tags/show.html.haml
@@ -2,7 +2,7 @@
   Bookmarks Tagged '#{ @tag.label }'
 
 - content_for :sidebar_body do
-  %h1
+  %h2.ui.dividing.header
     Tag: 
     .ui.massive.label{ class: [ @tag.color ] }= @tag.label
 
