--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -2,16 +2,35 @@
   Bookmark '#{ @bookmark.title }'
 
 - content_for :sidebar do
-  - if @bookmark.offline_caches.any?
-    = link_to "offline cache", bookmark_cache_index_path(@bookmark), data: { turbolinks: false }, class: "ui item"
+  .tb.bulk-action-menu
+    %h2 Actions
 
-  = link_to "edit", edit_bookmark_path(@bookmark), class: "ui item"
+    = link_to edit_bookmark_path(@bookmark), class: "button button-white-outline hover:button-white text-white hover:text-gray-800" do
+      %i.pencil.icon
+      Edit
 
-  .right.menu
-    = link_to "recache", bookmark_cache_index_path(@bookmark), method: :post, class: "ui item"
+    -# TODO: replace
+    = modal_tag @bookmark, :delete, url: bookmark_path(@bookmark), class: "button button-red-outline hover:button-red" do
+      %i.trash.can.icon
+      Delete
 
-    = modal_tag @bookmark, :delete, url: bookmark_path(@bookmark) do
-      delete
+    %h2 Offline Archive
+
+    - if @bookmark.current_offline_cache.present?
+      Archive made on
+      %time{ datetime: @bookmark.current_offline_cache.created_at.rfc2822 }
+        = @bookmark.current_offline_cache.created_at.to_s(:long)
+        UTC
+
+      = link_to "View Archive", bookmark_cache_index_path(@bookmark), data: { turbolinks: false }, class: "button button-white-outline hover:button-white text-white hover:text-gray-800"
+    - else
+      No archive available
+
+    = button_to bookmark_cache_index_path(@bookmark), class: "button button-white-outline hover:button-white text-white hover:text-gray-800" do
+      - if @bookmark.offline_caches.any?
+        Re-Archive
+      - else
+        Archive
 
 - content_for :sidebar_body do
   = model_tag @bookmark, only: [ :uri, :title ], no_checkbox: true
@@ -22,7 +41,7 @@
         .content= @bookmark.title
 
       = link_to @bookmark.uri.to_s, @bookmark.uri.to_s
-      .date
+      %time{ datetime: @bookmark.created_at.rfc2822 }
         = @bookmark.created_at.to_s(:long)
         UTC
 
@@ -34,4 +53,5 @@
 
     .eight.wide.column
       - if @bookmark.description.present?
-        = simple_format @bookmark.description
+        :markdown
+          #{ @bookmark.description }
