Move application partials to application dir

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,9 @@
 !!! 5
 %html
   %head
-    = render partial: "layouts/head"
+    = render partial: "layouts/application/head"
 
   %body{ class: [  controller_name, action_name ] }
-    = render partial: "layouts/body"
+    = render partial: "layouts/application/body"
 
-    = render partial: "layouts/footer"
+    = render partial: "layouts/application/footer"
