--- a/app/views/layouts/page.html.haml
+++ b/app/views/layouts/page.html.haml
@@ -13,6 +13,6 @@
   %body{ class: [  controller_name, action_name ] }
     = render "layouts/common/store"
 
-    = render "layouts/application/body"
+    = render "layouts/page/body"
 
     = render "layouts/common/footer"
