--- a/app/views/bookmarks/tags/show.html.haml
+++ b/app/views/bookmarks/tags/show.html.haml
@@ -1,7 +1,7 @@
 - content_for :page_title do
   Bookmarks Tagged '#{ @tag.label }'
 
-- set_store_content records: store_records(@bookmarks, only: [:id, :title, :uri])
+- store_content records: store_records(@bookmarks, only: [:id, :title, :uri])
 
 - content_for :sidebar do
   - if @bookmarks.any?
