--- a/app/views/bookmarks/search/index.html.haml
+++ b/app/views/bookmarks/search/index.html.haml
@@ -1,6 +1,8 @@
 - content_for :page_title do
   Searching Bookmarks
 
+- store_content records: store_records(@bookmarks, only: [:id, :title, :uri])
+
 .ui.search.mobile.only
   .ui.fluid.icon.input
     = form_tag bookmarks_search_index_path, method: :get do
